--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name":"Mood",
+    "name":"Moods",
     "description": "This handles different moods in Chrome.",
     "version":"1.0",
     "manifest_version":3,
@@ -19,5 +19,11 @@
           },
           "description": "Opens main/popup.html"
         }
+      },
+      "icons": { 
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "64": "icons/icon64.png",
+       "128": "icons/icon128.png" 
       }
 }
