--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Moods",
-    "description": "This handles different moods in Chrome.",
-    "version":"1.0",
+    "description": "This handles different moods of yours while browsing.",
+    "version":"2.0",
     "manifest_version":3,
     "background": {
         "service_worker":"background/background.js"
